--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,37 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
+[common]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
 lib_deps = 
-    fastled/FastLED@^3.9.11
+    fastled/FastLED@^3.10.1
     ArduinoJson
-    https://github.com/me-no-dev/AsyncTCP
-    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    knolleary/PubSubClient@2.8
 monitor_speed = 115200
+
+[env:peg_esp32]
+extends = common
+build_flags = 
+    -DDEVICE_ID_ESP32_PEG
+    -DLED_PIN_0=12
+    -DLED_PIN_1=13
+    -DLED_PIN_2=14
+    -DNUM_LEDS_0=88
+    -DNUM_LEDS_1=88
+    -DNUM_LEDS_2=88
+
+[env:desk_esp32]
+extends = common
+build_flags =
+    -DDEVICE_ID_ESP32_DESK
+    -DLED_PIN_0=25
+    -DNUM_LEDS_0=108
+
+[env:test_esp32]
+extends = common
+build_flags = 
+    -DDEVICE_ID_ESP32_TEST
+    -DLED_PIN_0=25
+    -DNUM_LEDS_0=108
